# streamlit-image-crop

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example.py  mypy.ini  pyproject.toml
.github/workflows/: main.yml
streamlit_image_crop/: __init__.py
streamlit_image_crop/frontend/: package-lock.json  package.json
streamlit_image_crop/frontend/public/: index.html
streamlit_image_crop/frontend/src/: ImageCrop.tsx  index.tsx
